[project]
name = "revolut.py"
version = "1.0.0"
authors = [
  { name="Jasper", email="jasper@jazper.dk" },
]
description = "Simple Revolut Merchant API Wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "pydantic == 2.4.2",
    "requests == 2.31.0",
    "aiohttp == 3.8.6"
]
[project.optional-dependencies]
test = [
    "pytest == 7.4.2",
]
[project.urls]
"Homepage" = "https://github.com/j4asper/revolut.py"
"Bug Tracker" = "https://github.com/j4asper/revolut.py/issues"